--- a/1Introduction/Part2_Web_Scraping_WebDriver.ipynb
+++ b/1Introduction/Part2_Web_Scraping_WebDriver.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "selenium.webdriver.remote.webelement.WebElement"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "(list, 5)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "16"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -182,90 +182,105 @@
      "output_type": "stream",
      "text": [
       "OFFRE DU JOUR\n",
-      "13,99 € - 139,99 €\n",
-      "LEGO: jusqu'à -20% sur une sélection de Jeux de Construction\n",
-      "19\n",
-      "Offre terminée\n",
+      "179,99 € - 659,99 €\n",
+      "Termine dans 12:37:27\n",
+      "Arlo : Jusqu'à 35% de réduction sur une sélection de caméras\n",
+      "73\n",
+      "Voir l'offre\n",
       "\n",
       "OFFRE DU JOUR\n",
-      "13,99 € - 139,99 €\n",
-      "LEGO: jusqu'à -20% sur une sélection de Jeux de Construction\n",
-      "19\n",
-      "Offre terminée\n",
-      "\n",
-      "\n",
-      "\n",
-      "OFFRE DU JOUR\n",
-      "13,99 € - 139,99 €\n",
-      "LEGO: jusqu'à -20% sur une sélection de Jeux de Construction\n",
-      "19\n",
-      "Offre terminée\n",
-      "\n",
-      "OFFRE DU JOUR\n",
-      "9,20 € - 13,99 €\n",
-      "Jusqu'à -41% sur les grands classiques jeux de société d'Hasbro\n",
-      "51\n",
-      "Offre terminée\n",
-      "\n",
-      "OFFRE DU JOUR\n",
-      "9,20 € - 13,99 €\n",
-      "Jusqu'à -41% sur les grands classiques jeux de société d'Hasbro\n",
-      "51\n",
-      "Offre terminée\n",
+      "179,99 € - 659,99 €\n",
+      "Termine dans 12:37:27\n",
+      "Arlo : Jusqu'à 35% de réduction sur une sélection de caméras\n",
+      "73\n",
+      "Voir l'offre\n",
       "\n",
       "\n",
       "\n",
       "OFFRE DU JOUR\n",
-      "9,20 € - 13,99 €\n",
-      "Jusqu'à -41% sur les grands classiques jeux de société d'Hasbro\n",
-      "51\n",
-      "Offre terminée\n",
+      "179,99 € - 659,99 €\n",
+      "Termine dans 12:37:27\n",
+      "Arlo : Jusqu'à 35% de réduction sur une sélection de caméras\n",
+      "73\n",
+      "Voir l'offre\n",
       "\n",
       "OFFRE DU JOUR\n",
-      "9,99 € - 39,99 €\n",
-      "Jusqu'à -26% sur une sélection de produits Nerf\n",
-      "92\n",
-      "Offre terminée\n",
+      "16,04 € - 183,99 €\n",
+      "Termine dans 12:37:27\n",
+      "SanDisk: Jusqu'à 40% de réduction une sélection de produits\n",
+      "175\n",
+      "Voir l'offre\n",
       "\n",
       "OFFRE DU JOUR\n",
-      "9,99 € - 39,99 €\n",
-      "Jusqu'à -26% sur une sélection de produits Nerf\n",
-      "92\n",
-      "Offre terminée\n",
+      "16,04 € - 183,99 €\n",
+      "Termine dans 12:37:27\n",
+      "SanDisk: Jusqu'à 40% de réduction une sélection de produits\n",
+      "175\n",
+      "Voir l'offre\n",
       "\n",
       "\n",
       "\n",
       "OFFRE DU JOUR\n",
-      "9,99 € - 39,99 €\n",
-      "Jusqu'à -26% sur une sélection de produits Nerf\n",
-      "92\n",
-      "Offre terminée\n",
+      "16,04 € - 183,99 €\n",
+      "Termine dans 12:37:27\n",
+      "SanDisk: Jusqu'à 40% de réduction une sélection de produits\n",
+      "175\n",
+      "Voir l'offre\n",
       "\n",
       "OFFRE DU JOUR\n",
-      "219,90 €\n",
-      "Prix conseillé : 519,00 € (-58%)\n",
-      "Braun: Épilateur Lumière Pulsée 5009\n",
+      "349,00 €\n",
+      "Prix : 499,00 € (-30%)\n",
+      "Termine dans 12:32:28\n",
+      "TD Systems TV 50 pouces Ultra HD 4K\n",
+      "Vendu par TD Systems et expédié par Amazon\n",
+      "40\n",
+      "Ajouter au panier\n",
+      "\n",
+      "OFFRE DU JOUR\n",
+      "349,00 €\n",
+      "Prix : 499,00 € (-30%)\n",
+      "Termine dans 12:32:28\n",
+      "TD Systems TV 50 pouces Ultra HD 4K\n",
+      "Vendu par TD Systems et expédié par Amazon\n",
+      "40\n",
+      "Ajouter au panier\n",
+      "\n",
+      "\n",
+      "\n",
+      "OFFRE DU JOUR\n",
+      "349,00 €\n",
+      "Prix : 499,00 € (-30%)\n",
+      "Termine dans 12:32:27\n",
+      "TD Systems TV 50 pouces Ultra HD 4K\n",
+      "Vendu par TD Systems et expédié par Amazon\n",
+      "40\n",
+      "Ajouter au panier\n",
+      "\n",
+      "OFFRE DU JOUR\n",
+      "149,90 €\n",
+      "Termine dans 12:37:26\n",
+      "Philips HD9642/20 Airfryer Blanc + Plateau\n",
       "Vendu et expédié par Amazon.fr\n",
-      "239\n",
-      "Offre terminée\n",
+      "61\n",
+      "Ajouter au panier\n",
       "\n",
       "OFFRE DU JOUR\n",
-      "219,90 €\n",
-      "Prix conseillé : 519,00 € (-58%)\n",
-      "Braun: Épilateur Lumière Pulsée 5009\n",
+      "149,90 €\n",
+      "Termine dans 12:37:26\n",
+      "Philips HD9642/20 Airfryer Blanc + Plateau\n",
       "Vendu et expédié par Amazon.fr\n",
-      "239\n",
-      "Offre terminée\n",
+      "61\n",
+      "Ajouter au panier\n",
       "\n",
       "\n",
       "\n",
       "OFFRE DU JOUR\n",
-      "219,90 €\n",
-      "Prix conseillé : 519,00 € (-58%)\n",
-      "Braun: Épilateur Lumière Pulsée 5009\n",
+      "149,90 €\n",
+      "Termine dans 12:37:26\n",
+      "Philips HD9642/20 Airfryer Blanc + Plateau\n",
       "Vendu et expédié par Amazon.fr\n",
-      "239\n",
-      "Offre terminée\n",
+      "61\n",
+      "Ajouter au panier\n",
       "\n"
      ]
     }
@@ -283,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,26 +347,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "Need to be implemented",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-77-a0caad50f45f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mextract_price\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_first_line_elements\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-77-a0caad50f45f>\u001b[0m in \u001b[0;36mextract_price\u001b[0;34m(offer_web_element)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mextract_price\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moffer_web_element\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Need to be implemented'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mextract_price\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_first_line_elements\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: Need to be implemented"
-     ]
+     "data": {
+      "text/plain": [
+       "'179,99 € - 659,99 €'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def extract_price(offer_web_element):\n",
-    "    raise NotImplementedError('Need to be implemented')\n",
-    "    pass\n",
+    "    return offer_web_element.find_element_by_class_name('priceBlock').text\n",
     "\n",
     "extract_price(all_first_line_elements[0])"
    ]
@@ -365,26 +377,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "Need to be implemented",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-78-63850a8c42cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mextract_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_first_line_elements\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-78-63850a8c42cb>\u001b[0m in \u001b[0;36mextract_image\u001b[0;34m(offer_web_element)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mextract_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moffer_web_element\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Need to be implemented'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mextract_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_first_line_elements\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: Need to be implemented"
-     ]
+     "data": {
+      "text/plain": [
+       "'https://images-na.ssl-images-amazon.com/images/I/31B4tfPxLyL._AA210_.jpg'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def extract_image(offer_web_element):\n",
-    "    raise NotImplementedError('Need to be implemented')\n",
-    "    pass\n",
+    "    return offer_web_element.find_element_by_class_name('imageBlock').find_element_by_tag_name('img').get_attribute('src')\n",
     "\n",
     "extract_image(all_first_line_elements[0])"
    ]
@@ -398,33 +407,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "Need to be implemented",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-79-a4f7a74d5827>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mextract_title\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_first_line_elements\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-79-a4f7a74d5827>\u001b[0m in \u001b[0;36mextract_title\u001b[0;34m(offer_web_element)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mextract_title\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moffer_web_element\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Need to be implemented'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mextract_title\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_first_line_elements\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: Need to be implemented"
-     ]
+     "data": {
+      "text/plain": [
+       "\"Arlo : Jusqu'à 35% de réduction sur une sélection de caméras\""
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def extract_title(offer_web_element):\n",
-    "    raise NotImplementedError('Need to be implemented')\n",
-    "    pass\n",
+    "    return offer_web_element.find_element_by_id('dealTitle').text\n",
     "\n",
     "extract_title(all_first_line_elements[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
